templates/06-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 
  name: 
  labels:
    app: 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 
  template:
    metadata:
      labels:
        app: 
    spec:
      serviceAccountName: default
      containers:
      - name: 
        image:
        command: [""]
        args: [""] 
        ports:
        - name: 
          containerPort: 
        volumeMounts:
        - name: 
          mountPath: 
      volumes:
      - name: 
        hostPath: 
          path:   
      - name: 
        configMap:
          name: 
      - name: 
        persistentVolumeClaim:
          claimName:
