templates/07-service.yml
apiVersion: v1
kind: Service
metadata:
  name: 
  namespace: 
  labels:
    app: 
spec:
  type: ClusterIP
  selector:
    app: 
  ports:
  - name: 
    port: 
    targetPort:
