templates/08-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 
  namespace: 
  labels:
    app: 
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        backend:
          serviceName: 
          servicePort:
